# simplebacktester

./: CMakeLists.txt  Instructions.txt  backtest.cpp  btc.csv  eth.csv  xrp.csv
